test/visibility/import/edgeCases/dontLeakSymbols1.good
dontLeakSymbols1.chpl:14: In function 'main':
dontLeakSymbols1.chpl:15: error: Symbol 'x' undeclared in module 'C'
